fixing size on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -133,9 +133,9 @@
    overflow-y: scroll !important;
    @media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
      margin-left: 15px;
-     margin-top: 10px;
+     margin-top: 5px;
      width: 90%;
-     height: 65%;
+     height: 60%;
    }
  }
  .fitpage {
